# ParameterizedCFM

./: .dexy  Makefile  README  crbftest.py  paper.cfg  paper.tex  preamble.tex  test1d.py
doc/: ParameterizedCFM.tex  references.bib
exploration/RadialBasisFunctions/: heaviside.py  test_trapz.py  test_vectorize.py
python/: plot1d.py  test1d.py  test2d.py
src/: CMakeLists.txt
src/Code/: CMakeLists.txt  ParameterInitialization.cxx  ParameterInitialization.h  ParameterizedLevelset.cxx  ParameterizedLevelset.h  RegisterParameterizedCFM.cxx  RegisterParameterizedCFM.json  Test1d.cxx  Test1d.h
src/Testing/: CMakeLists.txt  make-test-images-2d.cxx  test_images_2d_simple.json
src/Utilities/: CMakeLists.txt
src/Utilities/json/: CMakeLists.txt  README.txt  json.h  json_writer.cpp
